// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Title Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="title color-base"
  >
    It is a Title.
  </h4>
  <h4
    className="title color-primary"
  >
    It is a Title.
  </h4>
  <h4
    className="title color-error"
  >
    It is a Title.
  </h4>
</div>
`;

exports[`Storyshots Atoms/Title Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="title color-base"
  >
    It is a Title.
  </h4>
</div>
`;

exports[`Storyshots Atoms/Title Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="title color-base"
  >
    It is a Title.
  </h4>
  <h3
    className="title color-base"
  >
    It is a Title.
  </h3>
  <h2
    className="title color-base"
  >
    It is a Title.
  </h2>
  <h1
    className="title color-base"
  >
    It is a Title.
  </h1>
</div>
`;

exports[`Storyshots Atoms/Title Size Color 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="title color-base"
  >
    It is a Title.
  </h4>
  <h3
    className="title color-base"
  >
    It is a Title.
  </h3>
  <h2
    className="title color-base"
  >
    It is a Title.
  </h2>
  <h1
    className="title color-base"
  >
    It is a Title.
  </h1>
  <h4
    className="title color-primary"
  >
    It is a Title.
  </h4>
  <h3
    className="title color-primary"
  >
    It is a Title.
  </h3>
  <h2
    className="title color-primary"
  >
    It is a Title.
  </h2>
  <h1
    className="title color-primary"
  >
    It is a Title.
  </h1>
  <h4
    className="title color-error"
  >
    It is a Title.
  </h4>
  <h3
    className="title color-error"
  >
    It is a Title.
  </h3>
  <h2
    className="title color-error"
  >
    It is a Title.
  </h2>
  <h1
    className="title color-error"
  >
    It is a Title.
  </h1>
</div>
`;
